kubernetes/services/backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: chat-backend
spec:
  serviceType: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 31888
  selector:
    role: backend
    app: chat
